parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AND
    AND_SYMB
    AS
    ASIG_REFER
    BREAK
    CALLABLE
    CASE
    CATH
    CLASS
    CLONE
    COMENTARIO
    CONST
    CONTINUE
    CORCH_DER
    CORCH_IZQ
    DECLARE
    DEFAULT
    DO
    ENDDECLARE
    ENDIF
    ENDSWITCH
    ENDWHILE
    EXTENDS
    FINAL
    FINALLY
    FN
    FOREACH
    GLOBAL
    IMPLEMENTS
    INCLUDE
    INTANCEOF
    INTEADOF
    INTERFACE
    INTERROG_CE
    MACHT
    NAMESPACE
    OR
    OR_SYMB
    PRIVATE
    PROTECTED
    PUBLIC
    PUNTODOBLE
    REQUIERE
    SALTO_LINEA
    STATIC
    STRREV
    SWITCH
    TABULACION
    THROW
    TRAIT
    TRY
    USE
    VAR

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> valor
Rule 2     instrucciones -> asignacion
Rule 3     instrucciones -> concatenacion
Rule 4     instrucciones -> salida
Rule 5     instrucciones -> estructuras_control
Rule 6     instrucciones -> estructuras_datos
Rule 7     instrucciones -> funciones
Rule 8     instrucciones -> op_pila
Rule 9     instrucciones -> valorc
Rule 10    instrucciones -> multiples
Rule 11    instrucciones -> LLAVE_DER
Rule 12    instrucciones -> llamadaFuncion
Rule 13    decl_variable -> SIGNO_DOLAR VARIABLE
Rule 14    asignacion -> decl_variable IGUAL valor PUNTO_COMA
Rule 15    valor -> datos
Rule 16    valor -> pila
Rule 17    valor -> cola
Rule 18    valor -> arreglo
Rule 19    datos -> ENTERO
Rule 20    datos -> FLOTANTE
Rule 21    datos -> STRING
Rule 22    datos -> BOOLEANO
Rule 23    salidas_pos -> datos
Rule 24    salidas_pos -> decl_variable
Rule 25    salidas_pos -> conca_string
Rule 26    multiples -> salidas_pos
Rule 27    multiples -> salidas_pos multiples
Rule 28    salida -> ECHO salidas_pos PUNTO_COMA
Rule 29    salida -> PRINT PAREN_IZQ salidas_pos PAREN_DER PUNTO_COMA
Rule 30    salida -> PRINT salidas_pos PUNTO_COMA
Rule 31    estructuras_control -> if_else
Rule 32    estructuras_control -> for
Rule 33    estructuras_control -> whileDeclaracion
Rule 34    estructuras_datos -> pila
Rule 35    estructuras_datos -> cola
Rule 36    estructuras_datos -> arreglo
Rule 37    funciones -> funcion_variable
Rule 38    funciones -> sinRetorno
Rule 39    funciones -> functConPar
Rule 40    operad_log -> IDENTICO
Rule 41    operad_log -> DIFERENTE
Rule 42    operad_log -> MAYOR_QUE
Rule 43    operad_log -> MAYOR_IGUAL
Rule 44    operad_log -> MENOR_QUE
Rule 45    operad_log -> MENOR_IGUAL
Rule 46    operad_arit -> SUMA
Rule 47    operad_arit -> RESTA
Rule 48    operad_arit -> MULTIPL
Rule 49    operad_arit -> DIVISION
Rule 50    operad_arit -> DIVISION_ENT
Rule 51    operad_arit -> POTENCIA
Rule 52    operad_arit -> MODULO
Rule 53    bloque -> asignacion
Rule 54    bloque -> salida
Rule 55    bloque -> retorno
Rule 56    bloque -> estructuras_control
Rule 57    bloque -> asignacion bloque
Rule 58    bloque -> salida bloque
Rule 59    bloque -> retorno bloque
Rule 60    bloque -> estructuras_control bloque
Rule 61    bloque -> multiples
Rule 62    bloque -> multiples bloque
Rule 63    sinRetorno -> FUNCTION VARIABLE PAREN_IZQ SIGNO_DOLAR VARIABLE PAREN_DER LLAVE_IZQ sentenciasAnidadas
Rule 64    sinRetorno -> cola LLAVE_DER
Rule 65    cola -> NEW QUEUE PAREN_IZQ PAREN_DER
Rule 66    for -> FOR PAREN_IZQ asignacion declaracionp declaracion_s PAREN_DER LLAVE_IZQ sentenciasAnidadas
Rule 67    for -> cola LLAVE_DER
Rule 68    sentenciasAnidadas -> instrucciones
Rule 69    sentenciasAnidadas -> instrucciones sentenciasAnidadas
Rule 70    declaracionp -> SIGNO_DOLAR VARIABLE valorc
Rule 71    menor -> MENOR_IGUAL ENTERO PUNTO_COMA
Rule 72    mayor -> MAYOR_IGUAL ENTERO PUNTO_COMA
Rule 73    valorc -> menor
Rule 74    valorc -> mayor
Rule 75    declaracion_s -> SIGNO_DOLAR VARIABLE crecimiento
Rule 76    crecimiento -> INCREMENTO
Rule 77    crecimiento -> DECREMENTO
Rule 78    if_else -> if_else_inicio if_else_fin
Rule 79    if_else -> if_else_inicio if_else_cuerpo if_else_fin
Rule 80    if_else_inicio -> IF PAREN_IZQ op_logica PAREN_DER LLAVE_IZQ bloque LLAVE_DER
Rule 81    if_else_cuerpo -> ELSEIF PAREN_IZQ op_logica PAREN_DER LLAVE_IZQ bloque LLAVE_DER
Rule 82    if_else_cuerpo -> ELSEIF PAREN_IZQ op_logica PAREN_DER LLAVE_IZQ bloque LLAVE_DER if_else_cuerpo
Rule 83    if_else_fin -> ELSE LLAVE_IZQ bloque LLAVE_DER
Rule 84    op_logica -> ENTERO operad_log ENTERO
Rule 85    op_logica -> FLOTANTE operad_log FLOTANTE
Rule 86    op_logica -> STRING operad_log STRING
Rule 87    op_logica -> BOOLEANO
Rule 88    op_logica -> SIGNO_DOLAR VARIABLE operad_log SIGNO_DOLAR VARIABLE
Rule 89    op_logica -> SIGNO_DOLAR VARIABLE operad_log ENTERO
Rule 90    op_logica -> SIGNO_DOLAR VARIABLE operad_log FLOTANTE
Rule 91    pila -> NEW STACK PAREN_IZQ PAREN_DER
Rule 92    op_pila -> decl_variable ASIG_OBJ operad_pila
Rule 93    operad_pila -> PUSH PAREN_IZQ datos PAREN_DER PUNTO_COMA
Rule 94    operad_pila -> POP PAREN_IZQ PAREN_DER PUNTO_COMA
Rule 95    operad_pila -> COUNT PAREN_IZQ PAREN_DER PUNTO_COMA
Rule 96    operad_pila -> CURRENT PAREN_IZQ PAREN_DER PUNTO_COMA
Rule 97    funcion_variable -> FUNCTION VARIABLE PAREN_IZQ TRES_PUNTOS decl_variable PAREN_DER LLAVE_IZQ bloque LLAVE_DER
Rule 98    retorno -> RETURN salidas_pos PUNTO_COMA
Rule 99    concatenacion -> decl_variable ASIG_CONCA datos PUNTO_COMA
Rule 100   conca_string -> STRING PUNTO STRING
Rule 101   salida -> PRINT_R PAREN_IZQ valor PAREN_DER PUNTO_COMA
Rule 102   salidas_pos_obj -> valor
Rule 103   salidas_pos_obj -> decl_variable
Rule 104   salidas_pos_obj -> conca_string
Rule 105   contenido -> bloque
Rule 106   contenido -> sinRetorno
Rule 107   whileDeclaracion -> WHILE PAREN_IZQ decl_variable operad_log valor PAREN_DER LLAVE_IZQ contenido LLAVE_DER
Rule 108   valores -> datos repite_valores
Rule 109   repite_valores -> COMA datos
Rule 110   repite_valores -> COMA datos repite_valores
Rule 111   arreglo -> ARRAY PAREN_IZQ valores PAREN_DER
Rule 112   valoresflecha -> datos FLECHA datos repite_valores_f
Rule 113   repite_valores_f -> COMA datos FLECHA datos
Rule 114   repite_valores_f -> COMA datos FLECHA datos repite_valores
Rule 115   arreglo -> decl_variable IGUAL ARRAY PAREN_IZQ valoresflecha PAREN_DER PUNTO_COMA
Rule 116   parametros -> datos
Rule 117   parametros -> SIGNO_DOLAR VARIABLE
Rule 118   parametrosR -> parametros
Rule 119   parametrosR -> parametros repite_parametros
Rule 120   repite_parametros -> COMA parametros
Rule 121   repite_parametros -> COMA parametros repite_parametros
Rule 122   functConPar -> FUNCTION VARIABLE PAREN_IZQ parametrosR PAREN_DER LLAVE_IZQ bloque LLAVE_DER
Rule 123   llamadaFuncion -> VARIABLE PAREN_IZQ parametrosR PAREN_DER PUNTO_COMA

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 
AND_SYMB             : 
ARRAY                : 111 115
AS                   : 
ASIG_CONCA           : 99
ASIG_OBJ             : 92
ASIG_REFER           : 
BOOLEANO             : 22 87
BREAK                : 
CALLABLE             : 
CASE                 : 
CATH                 : 
CLASS                : 
CLONE                : 
COMA                 : 109 110 113 114 120 121
COMENTARIO           : 
CONST                : 
CONTINUE             : 
CORCH_DER            : 
CORCH_IZQ            : 
COUNT                : 95
CURRENT              : 96
DECLARE              : 
DECREMENTO           : 77
DEFAULT              : 
DIFERENTE            : 41
DIVISION             : 49
DIVISION_ENT         : 50
DO                   : 
ECHO                 : 28
ELSE                 : 83
ELSEIF               : 81 82
ENDDECLARE           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
ENTERO               : 19 71 72 84 84 89
EXTENDS              : 
FINAL                : 
FINALLY              : 
FLECHA               : 112 113 114
FLOTANTE             : 20 85 85 90
FN                   : 
FOR                  : 66
FOREACH              : 
FUNCTION             : 63 97 122
GLOBAL               : 
IDENTICO             : 40
IF                   : 80
IGUAL                : 14 115
IMPLEMENTS           : 
INCLUDE              : 
INCREMENTO           : 76
INTANCEOF            : 
INTEADOF             : 
INTERFACE            : 
INTERROG_CE          : 
LLAVE_DER            : 11 64 67 80 81 82 83 97 107 122
LLAVE_IZQ            : 63 66 80 81 82 83 97 107 122
MACHT                : 
MAYOR_IGUAL          : 43 72
MAYOR_QUE            : 42
MENOR_IGUAL          : 45 71
MENOR_QUE            : 44
MODULO               : 52
MULTIPL              : 48
NAMESPACE            : 
NEW                  : 65 91
OR                   : 
OR_SYMB              : 
PAREN_DER            : 29 63 65 66 80 81 82 91 93 94 95 96 97 101 107 111 115 122 123
PAREN_IZQ            : 29 63 65 66 80 81 82 91 93 94 95 96 97 101 107 111 115 122 123
POP                  : 94
POTENCIA             : 51
PRINT                : 29 30
PRINT_R              : 101
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 100
PUNTODOBLE           : 
PUNTO_COMA           : 14 28 29 30 71 72 93 94 95 96 98 99 101 115 123
PUSH                 : 93
QUEUE                : 65
REQUIERE             : 
RESTA                : 47
RETURN               : 98
SALTO_LINEA          : 
SIGNO_DOLAR          : 13 63 70 75 88 88 89 90 117
STACK                : 91
STATIC               : 
STRING               : 21 86 86 100 100
STRREV               : 
SUMA                 : 46
SWITCH               : 
TABULACION           : 
THROW                : 
TRAIT                : 
TRES_PUNTOS          : 97
TRY                  : 
USE                  : 
VAR                  : 
VARIABLE             : 13 63 63 70 75 88 88 89 90 97 117 122 123
WHILE                : 107
error                : 

Nonterminals, with rules where they appear

arreglo              : 18 36
asignacion           : 2 53 57 66
bloque               : 57 58 59 60 62 80 81 82 83 97 105 122
cola                 : 17 35 64 67
conca_string         : 25 104
concatenacion        : 3
contenido            : 107
crecimiento          : 75
datos                : 15 23 93 99 108 109 110 112 112 113 113 114 114 116
decl_variable        : 14 24 92 97 99 103 107 115
declaracion_s        : 66
declaracionp         : 66
estructuras_control  : 5 56 60
estructuras_datos    : 6
for                  : 32
funcion_variable     : 37
funciones            : 7
functConPar          : 39
if_else              : 31
if_else_cuerpo       : 79 82
if_else_fin          : 78 79
if_else_inicio       : 78 79
instrucciones        : 68 69 0
llamadaFuncion       : 12
mayor                : 74
menor                : 73
multiples            : 10 27 61 62
op_logica            : 80 81 82
op_pila              : 8
operad_arit          : 
operad_log           : 84 85 86 88 89 90 107
operad_pila          : 92
parametros           : 118 119 120 121
parametrosR          : 122 123
pila                 : 16 34
repite_parametros    : 119 121
repite_valores       : 108 110 114
repite_valores_f     : 112
retorno              : 55 59
salida               : 4 54 58
salidas_pos          : 26 27 28 29 30 98
salidas_pos_obj      : 
sentenciasAnidadas   : 63 66 69
sinRetorno           : 38 106
valor                : 1 14 101 102 107
valorc               : 9 70
valores              : 111
valoresflecha        : 115
whileDeclaracion     : 33

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . valor
    (2) instrucciones -> . asignacion
    (3) instrucciones -> . concatenacion
    (4) instrucciones -> . salida
    (5) instrucciones -> . estructuras_control
    (6) instrucciones -> . estructuras_datos
    (7) instrucciones -> . funciones
    (8) instrucciones -> . op_pila
    (9) instrucciones -> . valorc
    (10) instrucciones -> . multiples
    (11) instrucciones -> . LLAVE_DER
    (12) instrucciones -> . llamadaFuncion
    (15) valor -> . datos
    (16) valor -> . pila
    (17) valor -> . cola
    (18) valor -> . arreglo
    (14) asignacion -> . decl_variable IGUAL valor PUNTO_COMA
    (99) concatenacion -> . decl_variable ASIG_CONCA datos PUNTO_COMA
    (28) salida -> . ECHO salidas_pos PUNTO_COMA
    (29) salida -> . PRINT PAREN_IZQ salidas_pos PAREN_DER PUNTO_COMA
    (30) salida -> . PRINT salidas_pos PUNTO_COMA
    (101) salida -> . PRINT_R PAREN_IZQ valor PAREN_DER PUNTO_COMA
    (31) estructuras_control -> . if_else
    (32) estructuras_control -> . for
    (33) estructuras_control -> . whileDeclaracion
    (34) estructuras_datos -> . pila
    (35) estructuras_datos -> . cola
    (36) estructuras_datos -> . arreglo
    (37) funciones -> . funcion_variable
    (38) funciones -> . sinRetorno
    (39) funciones -> . functConPar
    (92) op_pila -> . decl_variable ASIG_OBJ operad_pila
    (73) valorc -> . menor
    (74) valorc -> . mayor
    (26) multiples -> . salidas_pos
    (27) multiples -> . salidas_pos multiples
    (123) llamadaFuncion -> . VARIABLE PAREN_IZQ parametrosR PAREN_DER PUNTO_COMA
    (19) datos -> . ENTERO
    (20) datos -> . FLOTANTE
    (21) datos -> . STRING
    (22) datos -> . BOOLEANO
    (91) pila -> . NEW STACK PAREN_IZQ PAREN_DER
    (65) cola -> . NEW QUEUE PAREN_IZQ PAREN_DER
    (111) arreglo -> . ARRAY PAREN_IZQ valores PAREN_DER
    (115) arreglo -> . decl_variable IGUAL ARRAY PAREN_IZQ valoresflecha PAREN_DER PUNTO_COMA
    (13) decl_variable -> . SIGNO_DOLAR VARIABLE
    (78) if_else -> . if_else_inicio if_else_fin
    (79) if_else -> . if_else_inicio if_else_cuerpo if_else_fin
    (66) for -> . FOR PAREN_IZQ asignacion declaracionp declaracion_s PAREN_DER LLAVE_IZQ sentenciasAnidadas
    (67) for -> . cola LLAVE_DER
    (107) whileDeclaracion -> . WHILE PAREN_IZQ decl_variable operad_log valor PAREN_DER LLAVE_IZQ contenido LLAVE_DER
    (97) funcion_variable -> . FUNCTION VARIABLE PAREN_IZQ TRES_PUNTOS decl_variable PAREN_DER LLAVE_IZQ bloque LLAVE_DER
    (63) sinRetorno -> . FUNCTION VARIABLE PAREN_IZQ SIGNO_DOLAR VARIABLE PAREN_DER LLAVE_IZQ sentenciasAnidadas
    (64) sinRetorno -> . cola LLAVE_DER
    (122) functConPar -> . FUNCTION VARIABLE PAREN_IZQ parametrosR PAREN_DER LLAVE_IZQ bloque LLAVE_DER
    (71) menor -> . MENOR_IGUAL ENTERO PUNTO_COMA
    (72) mayor -> . MAYOR_IGUAL ENTERO PUNTO_COMA
    (23) salidas_pos -> . datos
    (24) salidas_pos -> . decl_variable
    (25) salidas_pos -> . conca_string
    (80) if_else_inicio -> . IF PAREN_IZQ op_logica PAREN_DER LLAVE_IZQ bloque LLAVE_DER
    (100) conca_string -> . STRING PUNTO STRING

    LLAVE_DER       shift and go to state 12
    ECHO            shift and go to state 19
    PRINT           shift and go to state 21
    PRINT_R         shift and go to state 22
    VARIABLE        shift and go to state 31
    ENTERO          shift and go to state 32
    FLOTANTE        shift and go to state 33
    STRING          shift and go to state 34
    BOOLEANO        shift and go to state 35
    NEW             shift and go to state 36
    ARRAY           shift and go to state 37
    SIGNO_DOLAR     shift and go to state 38
    FOR             shift and go to state 40
    WHILE           shift and go to state 41
    FUNCTION        shift and go to state 42
    MENOR_IGUAL     shift and go to state 43
    MAYOR_IGUAL     shift and go to state 44
    IF              shift and go to state 46

    instrucciones                  shift and go to state 1
    valor                          shift and go to state 2
    asignacion                     shift and go to state 3
    concatenacion                  shift and go to state 4
    salida                         shift and go to state 5
    estructuras_control            shift and go to state 6
    estructuras_datos              shift and go to state 7
    funciones                      shift and go to state 8
    op_pila                        shift and go to state 9
    valorc                         shift and go to state 10
    multiples                      shift and go to state 11
    llamadaFuncion                 shift and go to state 13
    datos                          shift and go to state 14
    pila                           shift and go to state 15
    cola                           shift and go to state 16
    arreglo                        shift and go to state 17
    decl_variable                  shift and go to state 18
    salidas_pos                    shift and go to state 20
    if_else                        shift and go to state 23
    for                            shift and go to state 24
    whileDeclaracion               shift and go to state 25
    funcion_variable               shift and go to state 26
    sinRetorno                     shift and go to state 27
    functConPar                    shift and go to state 28
    menor                          shift and go to state 29
    mayor                          shift and go to state 30
    if_else_inicio                 shift and go to state 39
    conca_string                   shift and go to state 45

state 1

    (0) S' -> instrucciones .



state 2

    (1) instrucciones -> valor .

    $end            reduce using rule 1 (instrucciones -> valor .)
    LLAVE_DER       reduce using rule 1 (instrucciones -> valor .)
    ECHO            reduce using rule 1 (instrucciones -> valor .)
    PRINT           reduce using rule 1 (instrucciones -> valor .)
    PRINT_R         reduce using rule 1 (instrucciones -> valor .)
    VARIABLE        reduce using rule 1 (instrucciones -> valor .)
    ENTERO          reduce using rule 1 (instrucciones -> valor .)
    FLOTANTE        reduce using rule 1 (instrucciones -> valor .)
    STRING          reduce using rule 1 (instrucciones -> valor .)
    BOOLEANO        reduce using rule 1 (instrucciones -> valor .)
    NEW             reduce using rule 1 (instrucciones -> valor .)
    ARRAY           reduce using rule 1 (instrucciones -> valor .)
    SIGNO_DOLAR     reduce using rule 1 (instrucciones -> valor .)
    FOR             reduce using rule 1 (instrucciones -> valor .)
    WHILE           reduce using rule 1 (instrucciones -> valor .)
    FUNCTION        reduce using rule 1 (instrucciones -> valor .)
    MENOR_IGUAL     reduce using rule 1 (instrucciones -> valor .)
    MAYOR_IGUAL     reduce using rule 1 (instrucciones -> valor .)
    IF              reduce using rule 1 (instrucciones -> valor .)
    RETURN          reduce using rule 1 (instrucciones -> valor .)


state 3

    (2) instrucciones -> asignacion .

    $end            reduce using rule 2 (instrucciones -> asignacion .)
    LLAVE_DER       reduce using rule 2 (instrucciones -> asignacion .)
    ECHO            reduce using rule 2 (instrucciones -> asignacion .)
    PRINT           reduce using rule 2 (instrucciones -> asignacion .)
    PRINT_R         reduce using rule 2 (instrucciones -> asignacion .)
    VARIABLE        reduce using rule 2 (instrucciones -> asignacion .)
    ENTERO          reduce using rule 2 (instrucciones -> asignacion .)
    FLOTANTE        reduce using rule 2 (instrucciones -> asignacion .)
    STRING          reduce using rule 2 (instrucciones -> asignacion .)
    BOOLEANO        reduce using rule 2 (instrucciones -> asignacion .)
    NEW             reduce using rule 2 (instrucciones -> asignacion .)
    ARRAY           reduce using rule 2 (instrucciones -> asignacion .)
    SIGNO_DOLAR     reduce using rule 2 (instrucciones -> asignacion .)
    FOR             reduce using rule 2 (instrucciones -> asignacion .)
    WHILE           reduce using rule 2 (instrucciones -> asignacion .)
    FUNCTION        reduce using rule 2 (instrucciones -> asignacion .)
    MENOR_IGUAL     reduce using rule 2 (instrucciones -> asignacion .)
    MAYOR_IGUAL     reduce using rule 2 (instrucciones -> asignacion .)
    IF              reduce using rule 2 (instrucciones -> asignacion .)
    RETURN          reduce using rule 2 (instrucciones -> asignacion .)


state 4

    (3) instrucciones -> concatenacion .

    $end            reduce using rule 3 (instrucciones -> concatenacion .)
    LLAVE_DER       reduce using rule 3 (instrucciones -> concatenacion .)
    ECHO            reduce using rule 3 (instrucciones -> concatenacion .)
    PRINT           reduce using rule 3 (instrucciones -> concatenacion .)
    PRINT_R         reduce using rule 3 (instrucciones -> concatenacion .)
    VARIABLE        reduce using rule 3 (instrucciones -> concatenacion .)
    ENTERO          reduce using rule 3 (instrucciones -> concatenacion .)
    FLOTANTE        reduce using rule 3 (instrucciones -> concatenacion .)
    STRING          reduce using rule 3 (instrucciones -> concatenacion .)
    BOOLEANO        reduce using rule 3 (instrucciones -> concatenacion .)
    NEW             reduce using rule 3 (instrucciones -> concatenacion .)
    ARRAY           reduce using rule 3 (instrucciones -> concatenacion .)
    SIGNO_DOLAR     reduce using rule 3 (instrucciones -> concatenacion .)
    FOR             reduce using rule 3 (instrucciones -> concatenacion .)
    WHILE           reduce using rule 3 (instrucciones -> concatenacion .)
    FUNCTION        reduce using rule 3 (instrucciones -> concatenacion .)
    MENOR_IGUAL     reduce using rule 3 (instrucciones -> concatenacion .)
    MAYOR_IGUAL     reduce using rule 3 (instrucciones -> concatenacion .)
    IF              reduce using rule 3 (instrucciones -> concatenacion .)
    RETURN          reduce using rule 3 (instrucciones -> concatenacion .)


state 5

    (4) instrucciones -> salida .

    $end            reduce using rule 4 (instrucciones -> salida .)
    LLAVE_DER       reduce using rule 4 (instrucciones -> salida .)
    ECHO            reduce using rule 4 (instrucciones -> salida .)
    PRINT           reduce using rule 4 (instrucciones -> salida .)
    PRINT_R         reduce using rule 4 (instrucciones -> salida .)
    VARIABLE        reduce using rule 4 (instrucciones -> salida .)
    ENTERO          reduce using rule 4 (instrucciones -> salida .)
    FLOTANTE        reduce using rule 4 (instrucciones -> salida .)
    STRING          reduce using rule 4 (instrucciones -> salida .)
    BOOLEANO        reduce using rule 4 (instrucciones -> salida .)
    NEW             reduce using rule 4 (instrucciones -> salida .)
    ARRAY           reduce using rule 4 (instrucciones -> salida .)
    SIGNO_DOLAR     reduce using rule 4 (instrucciones -> salida .)
    FOR             reduce using rule 4 (instrucciones -> salida .)
    WHILE           reduce using rule 4 (instrucciones -> salida .)
    FUNCTION        reduce using rule 4 (instrucciones -> salida .)
    MENOR_IGUAL     reduce using rule 4 (instrucciones -> salida .)
    MAYOR_IGUAL     reduce using rule 4 (instrucciones -> salida .)
    IF              reduce using rule 4 (instrucciones -> salida .)
    RETURN          reduce using rule 4 (instrucciones -> salida .)


state 6

    (5) instrucciones -> estructuras_control .

    $end            reduce using rule 5 (instrucciones -> estructuras_control .)
    LLAVE_DER       reduce using rule 5 (instrucciones -> estructuras_control .)
    ECHO            reduce using rule 5 (instrucciones -> estructuras_control .)
    PRINT           reduce using rule 5 (instrucciones -> estructuras_control .)
    PRINT_R         reduce using rule 5 (instrucciones -> estructuras_control .)
    VARIABLE        reduce using rule 5 (instrucciones -> estructuras_control .)
    ENTERO          reduce using rule 5 (instrucciones -> estructuras_control .)
    FLOTANTE        reduce using rule 5 (instrucciones -> estructuras_control .)
    STRING          reduce using rule 5 (instrucciones -> estructuras_control .)
    BOOLEANO        reduce using rule 5 (instrucciones -> estructuras_control .)
    NEW             reduce using rule 5 (instrucciones -> estructuras_control .)
    ARRAY           reduce using rule 5 (instrucciones -> estructuras_control .)
    SIGNO_DOLAR     reduce using rule 5 (instrucciones -> estructuras_control .)
    FOR             reduce using rule 5 (instrucciones -> estructuras_control .)
    WHILE           reduce using rule 5 (instrucciones -> estructuras_control .)
    FUNCTION        reduce using rule 5 (instrucciones -> estructuras_control .)
    MENOR_IGUAL     reduce using rule 5 (instrucciones -> estructuras_control .)
    MAYOR_IGUAL     reduce using rule 5 (instrucciones -> estructuras_control .)
    IF              reduce using rule 5 (instrucciones -> estructuras_control .)
    RETURN          reduce using rule 5 (instrucciones -> estructuras_control .)


state 7

    (6) instrucciones -> estructuras_datos .

    $end            reduce using rule 6 (instrucciones -> estructuras_datos .)
    LLAVE_DER       reduce using rule 6 (instrucciones -> estructuras_datos .)
    ECHO            reduce using rule 6 (instrucciones -> estructuras_datos .)
    PRINT           reduce using rule 6 (instrucciones -> estructuras_datos .)
    PRINT_R         reduce using rule 6 (instrucciones -> estructuras_datos .)
    VARIABLE        reduce using rule 6 (instrucciones -> estructuras_datos .)
    ENTERO          reduce using rule 6 (instrucciones -> estructuras_datos .)
    FLOTANTE        reduce using rule 6 (instrucciones -> estructuras_datos .)
    STRING          reduce using rule 6 (instrucciones -> estructuras_datos .)
    BOOLEANO        reduce using rule 6 (instrucciones -> estructuras_datos .)
    NEW             reduce using rule 6 (instrucciones -> estructuras_datos .)
    ARRAY           reduce using rule 6 (instrucciones -> estructuras_datos .)
    SIGNO_DOLAR     reduce using rule 6 (instrucciones -> estructuras_datos .)
    FOR             reduce using rule 6 (instrucciones -> estructuras_datos .)
    WHILE           reduce using rule 6 (instrucciones -> estructuras_datos .)
    FUNCTION        reduce using rule 6 (instrucciones -> estructuras_datos .)
    MENOR_IGUAL     reduce using rule 6 (instrucciones -> estructuras_datos .)
    MAYOR_IGUAL     reduce using rule 6 (instrucciones -> estructuras_datos .)
    IF              reduce using rule 6 (instrucciones -> estructuras_datos .)
    RETURN          reduce using rule 6 (instrucciones -> estructuras_datos .)


state 8

    (7) instrucciones -> funciones .

    $end            reduce using rule 7 (instrucciones -> funciones .)
    LLAVE_DER       reduce using rule 7 (instrucciones -> funciones .)
    ECHO            reduce using rule 7 (instrucciones -> funciones .)
    PRINT           reduce using rule 7 (instrucciones -> funciones .)
    PRINT_R         reduce using rule 7 (instrucciones -> funciones .)
    VARIABLE        reduce using rule 7 (instrucciones -> funciones .)
    ENTERO          reduce using rule 7 (instrucciones -> funciones .)
    FLOTANTE        reduce using rule 7 (instrucciones -> funciones .)
    STRING          reduce using rule 7 (instrucciones -> funciones .)
    BOOLEANO        reduce using rule 7 (instrucciones -> funciones .)
    NEW             reduce using rule 7 (instrucciones -> funciones .)
    ARRAY           reduce using rule 7 (instrucciones -> funciones .)
    SIGNO_DOLAR     reduce using rule 7 (instrucciones -> funciones .)
    FOR             reduce using rule 7 (instrucciones -> funciones .)
    WHILE           reduce using rule 7 (instrucciones -> funciones .)
    FUNCTION        reduce using rule 7 (instrucciones -> funciones .)
    MENOR_IGUAL     reduce using rule 7 (instrucciones -> funciones .)
    MAYOR_IGUAL     reduce using rule 7 (instrucciones -> funciones .)
    IF              reduce using rule 7 (instrucciones -> funciones .)
    RETURN          reduce using rule 7 (instrucciones -> funciones .)


state 9

    (8) instrucciones -> op_pila .

    $end            reduce using rule 8 (instrucciones -> op_pila .)
    LLAVE_DER       reduce using rule 8 (instrucciones -> op_pila .)
    ECHO            reduce using rule 8 (instrucciones -> op_pila .)
    PRINT           reduce using rule 8 (instrucciones -> op_pila .)
    PRINT_R         reduce using rule 8 (instrucciones -> op_pila .)
    VARIABLE        reduce using rule 8 (instrucciones -> op_pila .)
    ENTERO          reduce using rule 8 (instrucciones -> op_pila .)
    FLOTANTE        reduce using rule 8 (instrucciones -> op_pila .)
    STRING          reduce using rule 8 (instrucciones -> op_pila .)
    BOOLEANO        reduce using rule 8 (instrucciones -> op_pila .)
    NEW             reduce using rule 8 (instrucciones -> op_pila .)
    ARRAY           reduce using rule 8 (instrucciones -> op_pila .)
    SIGNO_DOLAR     reduce using rule 8 (instrucciones -> op_pila .)
    FOR             reduce using rule 8 (instrucciones -> op_pila .)
    WHILE           reduce using rule 8 (instrucciones -> op_pila .)
    FUNCTION        reduce using rule 8 (instrucciones -> op_pila .)
    MENOR_IGUAL     reduce using rule 8 (instrucciones -> op_pila .)
    MAYOR_IGUAL     reduce using rule 8 (instrucciones -> op_pila .)
    IF              reduce using rule 8 (instrucciones -> op_pila .)
    RETURN          reduce using rule 8 (instrucciones -> op_pila .)


state 10

    (9) instrucciones -> valorc .

    $end            reduce using rule 9 (instrucciones -> valorc .)
    LLAVE_DER       reduce using rule 9 (instrucciones -> valorc .)
    ECHO            reduce using rule 9 (instrucciones -> valorc .)
    PRINT           reduce using rule 9 (instrucciones -> valorc .)
    PRINT_R         reduce using rule 9 (instrucciones -> valorc .)
    VARIABLE        reduce using rule 9 (instrucciones -> valorc .)
    ENTERO          reduce using rule 9 (instrucciones -> valorc .)
    FLOTANTE        reduce using rule 9 (instrucciones -> valorc .)
    STRING          reduce using rule 9 (instrucciones -> valorc .)
    BOOLEANO        reduce using rule 9 (instrucciones -> valorc .)
    NEW             reduce using rule 9 (instrucciones -> valorc .)
    ARRAY           reduce using rule 9 (instrucciones -> valorc .)
    SIGNO_DOLAR     reduce using rule 9 (instrucciones -> valorc .)
    FOR             reduce using rule 9 (instrucciones -> valorc .)
    WHILE           reduce using rule 9 (instrucciones -> valorc .)
    FUNCTION        reduce using rule 9 (instrucciones -> valorc .)
    MENOR_IGUAL     reduce using rule 9 (instrucciones -> valorc .)
    MAYOR_IGUAL     reduce using rule 9 (instrucciones -> valorc .)
    IF              reduce using rule 9 (instrucciones -> valorc .)
    RETURN          reduce using rule 9 (instrucciones -> valorc .)


state 11

    (10) instrucciones -> multiples .
